# expenses_analyzer

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
expenditure_analyzer/splid/: to_long_format.py
